# ffio

./: .gitignore  Build.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: frame_reader_sample.py  frame_writer_sample.py  julia_set_animation.py  requirements.txt
src/ffio/: __init__.py  frame_reader.py  frame_writer.py
src/ffmpeg_frame_io/: __init__.py  frame_reader.py  frame_writer.py
