# https://github.com/pypa/setuptools_scm
[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "ffio"
description = "The video frame reader/writer from/to a video file using FFmpeg"
dynamic = ["version"]
authors = [
  { name="Koichi Yamamoto", email="yamakox@gmail.com" },
]
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
]
requires-python = ">=3.8"
dependencies = [
    "ffmpeg-python >= 0.2.0",
    "numpy >= 1.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
write_to = "src/ffio/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[project.urls]
"Homepage" = "https://github.com/yamakox/ffio"
"Bug Tracker" = "https://github.com/yamakox/ffio"
