[project]
name = "ffio"
dynamic = ["version"]
description = "The video frame reader/writer from/to a video file using FFmpeg"
authors = [
  { name="yamakox", email="yamakox@gmail.com" },
]
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
]
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python >= 0.2.0",
    "numpy >= 1.20.0",
    "pillow >= 9.3.0",
]

[project.urls]
"Homepage" = "https://github.com/yamakox/ffio"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]

# HowTo: poetry add sphinx~=5.3.0 sphinx-rtd-theme~=1.1.1 --group dev && poetry install --with dev
version = "0.0.0"
[tool.poetry.group.dev.dependencies]
sphinx = ">=5.3.0,<5.4.0"
sphinx-rtd-theme = ">=1.1.1,<1.2.0"

# https://pypi.org/project/poetry-dynamic-versioning/
[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
