[project]
name = "ffio"
dynamic = ["version"]
description = "The video frame reader/writer from/to a video file using FFmpeg"
authors = [
  { name="yamakox", email="yamakox@gmail.com" },
]
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
]
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python >= 0.2.0",
    "numpy >= 2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yamakox/ffio"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# HowTo: poetry add sphinx sphinx-rtd-theme --group dev && poetry install --with dev
sphinx = ">=8.2.3,<8.3.0"
sphinx-rtd-theme = ">=3.0.2,<3.1.0"

[tool.poetry.requires-plugins]
# https://pypi.org/project/poetry-dynamic-versioning/
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
